--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/> 
     <link rel="stylesheet" href="./style/style.css">   
     <script src="./src/data.js" defer></script>
-    <script src="./src/01-faker.js" defer></script>
+    <script src="./src/randomEmployee.js" defer></script>
     <title>Document</title>
 </head>
 <body>
